sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value ij
		if (plusPetit(j+1,ij)) {
                                  ^